FE: Added functionality for getting the full track information for each duplicate within a playlist. Openapi spec updated. Other minor bug fixesBE: Added route for getting an individual song, including new typed client
